# voxshell

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
mlmodelselect/: cli.py  core.py  models.py  summary.py
tests/: test_audio.py  test_cli.py  test_core.py  test_filter.py  test_models.py  test_summary.py
voxshell/: __init__.py  audio.py  cli.py  config.py  core.py  filter.py  models.py  runner.py  summary.py  tts.py
